2012-12-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-treat-types): Include text/html as parts
	eligible for treatment.

	* gnus-util.el (gnus-goto-colon): Move to the beginning of the visual
	lines.  This makes summary commands with hidden threads work more
	reliably.

	* gnus-cite.el (gnus-article-hide-citation-maybe): Leave an expansion
	button to mark the hidden citations (bug#9395).

2012-12-26  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (mml2015-epg-signature-to-string): New function.
	(mml2015-epg-verify-result-to-string): New function.
	(mml2015-epg-decrypt, mml2015-epg-clear-decrypt, mml2015-epg-verify)
	(mml2015-epg-clear-verify): Use mml2015-epg-verify-result-to-string
	instead of epg-verify-result-to-string.
	(epg-signature-key-id, epg-signature-to-string): Autoload.
	(epg-verify-result-to-string): Remove autoload.

2012-12-25  Adam Sjøgren  <asjo@koldfront.dk>

	* mml2015.el (mml2015-epg-key-image): New function, to retrieve photo
	ID image from GPG public key.
	(mml2015-epg-key-image-to-string): New function.

2012-12-25  Leo Liu  <sdl.web@gmail.com>

	* plstore.el (plstore-passphrase-callback-function): Fix error when
	error when plstore-cache-passphrase-for-symmetric-encryption is set
	(bug#13264).

2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-set-global-variables): Don't copy over the summary
	buffer to the article buffer here, because that clobbers multiple
	article buffers.

	* gnus-art.el (gnus-article-setup-buffer): Make sure that the article
	buffer always points to the right summary buffer.

2012-12-25  John Wiegley  <jwiegley@gmail.com>

	* auth-source.el (auth-source-netrc-parse): Allow using "password" as
	the password (bug#12097).

2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-a): Don't tagify <A> elements that don't have HREFs
	(bug#13263).

	* gnus-salt.el (gnus-highlight-selected-tree): Check whether the Tree
	buffer exists before using it (bug#12475).
