@@ -1,3 +1,9 @@
+2012-12-26  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mml2015.el (mml2015-epg-key-image): Use mm-set-buffer-multibyte.
+
+	* gnus-compat.el (set-buffer-multibyte): Remove.
+
 2012-12-26  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-art.el (gnus-article-treat-types): Include text/html as parts
